<resources>
    <string name="nome_app">Monster Festival</string>
    <string name="powered_by_unige">Powered by UniGe</string>
    <string name="comincia_a_costruire_il_tuo_mondo">Comincia a costruire il tuo mondo</string>
    <string name="iniziamo">Iniziamo</string>
    <string name="clicca_per_accedere">Clicca per accedere</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_corta">Password troppo corta</string>
    <string name="cpassword">Conferma Password</string>
    <string name="vuoi_creare_un_account_registrati">Vuoi creare un account? Registrati</string>
    <string name="registrazione">Registrazione</string>
    <string name="nome">Nome</string>
    <string name="crea_account">Crea account</string>
    <string name="sei_gi_registrato_login">Sei già registrato? Login</string>
    <string name="vuoi_registrarti">Vuoi registrarti?</string>
    <string name="descrizione_se_ti_registri">Se ti registri, i tuoi dati saranno salvati in modo sicuro, consentendoti di accedervi da più dispositivi.</string>
    <string name="registrati">Registrati</string>
    <string name="non_ora">Non ora</string>
    <string name="cambia_email">Cambia Email</string>
    <string name="cambia_psw">Cambia Password</string>
    <string name="nuova_email_poup">Email Aggiornata</string>
    <string name="cancella_account">Cancella Account</string>
    <string name="account_cancellato">Account Cancellato </string>
    <string name="N_avventurieri">Numero di avventurieri</string>
    <string name="Lv_avventurieri">Livello avventurieri</string>
    <string name="Impostazioni_Scontro">Impostazioni Scontro</string>
    <string name="descriszione_impostazioni_scontro">Tramite i seguenti parametri verrà calcolata automaticamente la difficoltà dello scontro</string>

    <string name="credit">Credit</string>
    <string name="aggiornamenti">Check Update</string>
    <string name="feedback">Feedback</string>

    <string name="facile">Facile</string>
    <string name="medio">Medio</string>
    <string name="difficile">Difficile</string>
    <string name="mortale">Mortale</string>

    <string name="my_monsters">MyMonsters</string>

    <string name="nuova_psw_poup">Mail di Controllo Inviata</string>
    <string name="cambia_email_fallito">Cambio email fallito</string>
    <string name="cambia_psw_fallito">Cambio Password fallito</string>
    <string name="email_mancante">Inserire l\'Email</string>
    <string name="email_errata">Formattazione Email errata</string>
    <string name="password_mancante">Inserire la Password</string>
    <string name="cpassword_diversa">Le due Password non corrispondono</string>
    <string name="nome_mancante">Inserire il Nome Utente</string>
    <string name="account_creato">Account creato con Successo</string>
    <string name="registrazione_fallita">La Registrazione del tuo Account è fallita, riprovare…</string>
    <string name="login_riuscito">Login effettuato con Successo</string>
    <string name="login_fallito">Login non riuscito, riprovare…</string>

    <string name="ricerca_fallita">Ricerca non riuscito, riprova…</string>
    <string name="funzione_in_arrivo">Funzione non ancora disponibile, presto in arrivo!</string>
    <string name="connessione_assente">Connessione Assente</string>
    <string name="primo_accesso">Primo Accesso</string>
    <string name="primo_accesso_messaggio">Attenzione! Per il primo accesso è richiesta una connessione a Internet.</string>
    <string name="conferma_cancellazione">Conferma Cancellazione</string>
    <string name="conferma_cancellazione_messaggio">Sei sicuro di voler procedere? Questa azione è irreversibile.</string>
    <string name="sì">Sì</string>
    <string name="no">No</string>

    <string name="salva_party_titolo">Salvataggio Nuovo Party</string>
    <string name="salva_party_messaggio">Con quale nome vuoi salvare questo nuovo Party?</string>
    <string name="il_mio_party">Questo Party si chiamerà…</string>
    <string name="nome_usato">Attenzione: Esiste già un altro Party con questo nome</string>
    <string name="conferma_modifica">Conferma Modifica</string>
    <string name="conferma_modifica_messaggio">Sei sicuro di voler modificare questo Party? Questa azione è irreversibile.</string>

    <string name="crediti_titolo">Crediti</string>
    <string name="crediti_sviluppatori">Sviluppatori:</string>
    <string name="crediti_sviluppatori_messaggio">Federico Cardano, Francesco Marinelli, Samuele Pellegrini</string>
    <string name="crediti_fonti">Fonti:</string>
    <string name="crediti_fonti_messaggio">D&amp;D Monster Manual - Wizard of the Coast</string>
    <string name="ok">OK</string>

    <string name="salva">Salva</string>
    <string name="annulla">Annulla</string>
    <string name="riprova">Ritenta Connessione…</string>
    <string name="attendi">Attendi…</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="modifica">Modifica</string>
    <string name="chiudi">Chiudi</string>
    <string name="esporta">Esporta</string>
    <string name="rimuovi">Rimuovi</string>

    <string name="Titolo">Title</string>
    <string name="Ambiete">Ambiete:</string>
    <string name="CA">CA:</string>
    <string name="Categoria">Categoria:</string>
    <string name="Nome">Nome:</string>
    <string name="PF">PF:</string>
    <string name="Sfida">Sfida:</string>
    <string name="Taglia">Taglia:</string>
    <string name="CAR">CAR:</string>
    <string name="COST">COST:</string>
    <string name="DES">DES:</string>
    <string name="FOR">FOR:</string>
    <string name="INT">INT:</string>
    <string name="SAG">SAG:</string>
    <string name="Descrizione">Descrizione</string>
    <string name="Difficoltà">Diff:</string>
    <string name="mostri_party">Mostri:</string>

    <string name="creazione_mostri">Creazione Mostri</string>

    <string name="benvenuto">Benvenuto</string>
    <string name="default_utente">Anonymous</string>
    <string name="errore_login">Accedi per poter usare</string>
    <string name="ricerca_mostri">Ricerca mostri</string>
    <string name="creazione_party">Creazione Party</string>
    <string name="confronto_mostri">Confronto Mostri</string>
    <string name="commuity">Community</string>
    <string name="miei_party">I miei Party</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="cerca">Cerca…</string>
    <string name="seleziona">Seleziona</string>
    <string name="applica">Applica</string>
    <string name="torna_indietro">Torna Indietro</string>
    <string name="mostri">Mostri</string>
    <string name="party">Party</string>
    <string name="nome_compare_monsters">Confronto Mostri</string>
    <string name="nome_compare_parties">Confronto Party</string>

    <string name="nome_detail_monster">Scheda Mostro</string>
    <string name="nome_my_parties">I miei Party</string>
    <string name="nome_detail_party">Scheda Party</string>
    <string name="nome_party_creation">Creazione Party</string>
    <string name="nome_search">Ricerca</string>
    <string name="nome_search_filters">Filtri Ricerca</string>

    <string name="bottone_filtri">Buttone Filtri</string>
    <string name="filtro_Ambieti">Ambienti</string>
    <string name="filtro_Categorie">Categorie</string>
    <string name="filtro_Taglie">Taglie</string>

    <string name="aggiungi_mostro_1">Aggiungi il Primo Mostro</string>
    <string name="aggiungi_mostro_2">Aggiungi il Secondo Mostro</string>
    <string name="mostro_selezionato">Mostro selezionato correttamente</string>

    <string name="numero_mostri">Numero mostri</string>
    <string name="aggiungi_mostro">Aggiungi mostro</string>
    <string name="salva_party">Salva party</string>
    <string name="controlla_aggiornamenti">Check ogni:</string>
    <string name="password_dimenticata_invia_email">Password dimenticata? Invia email</string>
    <string name="controllo_aggiornamenti_effettuato">Controllo Aggiornamenti Effettuato</string>
    <string name="default_update_period">1 Giorno</string>
    <string name="numero_1">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="nuovo_commento">Nuovo Commento</string>
    <string name="avvertimento_commento">Attenzione! Una volta salvato, non potrai più modificare o cancellare il tuo commento</string>
    <string name="aggiungi_evento">Aggiungi evento</string>
    <string name="eventi">Eventi</string>
    <string name="crea_evento">Creazione Evento</string>
    <string name="event_detail">Dettagli Evento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_evento">Nome Evento</string>
    <string name="causa_evento">Causa Evento</string>
    <string name="reazione_evento">Reazione Evento</string>
    <string name="info_evento_mancante">Inserire Tutti i Campi</string>
    <string name="nome_evento_lungo">Nome Evento troppo lungo\n(max 20 caratteri)</string>
    <string name="nome_evento_caratteri">Nome Evento non deve contenere a capi e/o punti</string>
    <string name="causa_evento_lungo">Causa Evento troppo lungo\n(max 200 caratteri)</string>
    <string name="reazione_evento_lungo">Reazione Evento troppo lungo\n(max 200 caratteri)</string>
    <string name="n_post">n° Post:</string>
    <string name="data_di_creazione">Data di Creazione:</string>
    <string name="n_commenti">n° Commenti:</string>
    <string name="n_voti">n° Voti:</string>
    <string name="dettagli_utente">Dettagli Utente</string>
    <string name="autore_commento">Autore Commento</string>
    <string name="ordina_per">Ordina per:</string>
    <string name="pubblica">Pubblica</string>
    <string name="conferma_pubblicazione">Conferma Pubblicazione</string>
    <string name="crea_mostro">Crea Mostro</string>
    <string name="i_miei_mostri">I miei Mostri</string>

</resources>