<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#d3c1aa"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:textSize="20sp"
            android:textColor="@color/brawnColor"
            android:textStyle="bold"
            android:text="@string/salva_party_titolo"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/salva_party_messaggio"
            android:gravity="center"
            android:id="@+id/tvMessage"
            android:textColor="@color/brawnColor"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editNomeParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/il_mio_party"
            android:inputType="text|textPersonName|textAutoComplete"
            android:maxLength="15"
            android:textAlignment="center" />

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSalva"
                android:textColor="#eae4db"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="@string/salva"
                android:backgroundTint="@color/brawnColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnAnnulla"
                android:textColor="@color/brawnColor"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="@string/annulla"
                android:layout_margin="5dp"
                android:backgroundTint="#eae4db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>