<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrazione"
                android:textAlignment="center"
                android:textColor="@color/brawnColor"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="@string/nome"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/nome"
                android:inputType="text|textPersonName|textAutoComplete"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/email"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="text|textEmailAddress|textAutoComplete"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/password"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="text|textPassword|textAutoComplete"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_cpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/password"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/cpassword"
                android:inputType="text|textPassword|textAutoComplete"
                android:padding="8dp"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/brawnColor"
                android:text="@string/crea_account"
                android:textColor="@color/creamColor"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/loginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/sei_gi_registrato_login"
                android:textColor="@color/brawnColor"
                android:textSize="18sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>