<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context=".fragment_dir.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="2sp"
        android:paddingVertical="2sp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/impostazioni"
            android:textAlignment="center"
            android:textColor="@color/brawnColor"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ButtonNotifiche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/brawnColor"
            android:text="@string/notifiche"
            android:textColor="@color/creamColor"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/buttonFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/brawnColor"
            android:text="@string/feedback"
            android:textColor="@color/creamColor"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/ButtonCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/brawnColor"
            android:text="@string/credit"
            android:textColor="@color/creamColor"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Impostazioni_Scontro"
            android:textAlignment="center"
            android:textColor="@color/brawnColor"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descrizione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/descriszione_impostazioni_scontro" />

        <LinearLayout
            android:id="@+id/nAventurieriLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dividerPadding="2sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nAvventuriariLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/N_avventurieri"
                android:textAlignment="center"
                android:textColor="@color/brawnColor"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editTextNumAvventurieri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/N_avventurieri"
                android:inputType="number"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lvAvventurieriLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dividerPadding="2sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lvAvventuriariLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Lv_avventurieri"
                android:textAlignment="center"
                android:textColor="@color/brawnColor"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editTextLvAvventurieri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/N_avventurieri"
                android:inputType="number"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>